<resources>
    <string name="app_name">Just Java</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="topping">Topping</string>
    <string name="one">1</string>
    <string name="zero_dollar">$0</string>
    <string name="order_summary">Order Summary</string>

</resources>
